# DialogueCreatorForGames

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1cb3350  CMakeLists.txt.user.c1de4ae  CustomDialog.cpp  CustomDialog.h  DialogueData.cpp  DialogueData.h  LICENSE  README.md  Resources.qrc  main.cpp  maineditor.cpp  maineditor.h  maineditor.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h
data/ConnectionData/: connectiondata.cpp  connectiondata.h
data/Dialogue/: DialogueData.cpp  DialogueData.h  characterdata.h  fielddata.cpp  fielddata.h  inputdata.h  listdata.cpp  listdata.h  mainfielddata.cpp  subfielddata.h  textdata.h
data/Fields/: FieldTypes.h  fielddata.cpp  fielddata.h
data/Fields/MainFields/: mainfielddata.cpp  mainfielddata.h
data/Fields/MainFields/input/: inputdata.cpp  inputdata.h  inputlistdata.cpp  inputlistdata.h
data/Fields/MainFields/list/: listdata.cpp  listdata.h
data/Fields/MainFields/text/: textdata.cpp  textdata.h
data/Fields/SubFields/: subfielddata.cpp  subfielddata.h
data/Fields/SubFields/character/: characterdata.cpp  characterdata.h
data/Presets/: preset.cpp  preset.h
widgets/editor/Designer/: designer.cpp  designer.h  designer.ui
widgets/editor/EditorTools/: editortools.cpp  editortools.h  editortools.ui  editortools.ui.autosave
widgets/editor/EditorTools/EffectsDropdown/: effectsdropdown.cpp  effectsdropdown.h  effectsdropdown.ui
widgets/editor/EditorTools/Settings/: customfieldsettings.cpp  customfieldsettings.h  customfieldsettings.ui  effectsettings.cpp  effectsettings.h  effectsettings.ui  fieldsettings.cpp  fieldsettings.h  fieldsettings.ui  inputlistsettings.cpp  inputlistsettings.h  inputlistsettings.ui  inputlistsettingsconfig.cpp  inputlistsettingsconfig.h  inputlistsettingsconfig.ui  listsettings.cpp  listsettings.h  listsettings.ui  presetsettings.cpp  presetsettings.h  presetsettings.ui  settingsoption.cpp  settingsoption.h  settingsoption.ui
widgets/editor/EditorTools/Settings/EffectSettings/: effectsettings.h  effectsettings.ui
widgets/editor/EditorTools/Settings/FieldSettings/: fieldsettings.cpp  fieldsettings.h
widgets/editor/EditorTools/Settings/InputListSettings/: inputlistsettings.cpp  inputlistsettings.h  inputlistsettings.ui
widgets/editor/EditorTools/Settings/InputListSettingsConfig/: inputlistsettingsconfig.h
widgets/editor/EditorTools/Settings/ListSettings/: listsettings.cpp  listsettings.h
widgets/editor/EditorTools/Settings/PresetSettings/: presetsettings.h  presetsettings.ui
widgets/editor/EditorTools/Settings/SettingsOption/: settingsoption.cpp
widgets/editor/EditorWindow/: editorwindow.cpp  editorwindow.h  editorwindow.ui
widgets/editor/FieldConnection/: fieldconnection.cpp  fieldconnection.h  fieldconnection.ui
widgets/editor/Fields/CharacterField/: characterfield.cpp  characterfield.h  characterfield.ui
widgets/editor/Fields/InputListField/: inputlistfield.cpp  inputlistfield.h  inputlistfield.ui
widgets/editor/Fields/InputOpenField/: inputopenfield.cpp  inputopenfield.h  inputopenfield.ui
widgets/editor/Fields/ListField/: listfield.cpp  listfield.h  listfield.ui
widgets/editor/Fields/TextField/: textfield.cpp  textfield.h  textfield.ui
widgets/editor/MainEditor/: maineditor.cpp  maineditor.h  maineditor.ui
widgets/editor/Settings/: settings.cpp  settings.h  settings.ui
widgets/editor/Tabs/: tabs.cpp
widgets/tabs/ClosableTab/: closabletab.cpp  closabletab.h  closabletab.ui
widgets/tabs/EditorTabBar/: editortabbar.cpp  editortabbar.h  editortabbar.ui
widgets/tabs/NewTab/: newtab.cpp  newtab.h  newtab.ui
widgets/tabs/TabWindow/: tabwindow.cpp  tabwindow.h  tabwindow.ui
widgets/tabs/TabableWidget/: tabablewidget.cpp  tabablewidget.h  tabablewidget.ui
